--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "n8n-nodes-tmpfiles",
   "version": "0.1.0",
-  "description": "n8n community node to work with the Example API",
+  "description": "n8n Community node to upload files to Tmpfiles",
   "license": "MIT",
-  "homepage": "https://example.com",
+  "homepage": "https://tmpfiles.org",
   "keywords": ["n8n-community-node-package"],
   "author": { "name": "MookieLian", "email": "mookielianhd@gmail.com" },
-  "repository": { "type": "git", "url": "" },
+  "repository": { "type": "git", "url": "https://github.com/mookielian/n8n-nodes-tmpfiles" },
   "scripts": {
     "build": "n8n-node build",
     "build:watch": "tsc --watch",
